# AudioRouter

./: .gitignore  AudioRouter.sln  Cargo.toml  Main.cpp  Makefile.toml  README.md  audio_router.inx  dbg.bat  windbg.md
AudioRouter/: AdapterCommon.cpp  AdapterCommon.h  AudioRouter.inf  AudioRouter.vcxproj  AudioRouter.vcxproj.filters  Device.cpp  Device.h  Driver.c  Driver.cpp  Driver.h  List.h  Prelude.cpp  Prelude.h  Public.h  Queue.c  Queue.cpp  Queue.h  ReadMe.txt  SpeakerWavTable.h  Trace.h
AudioRouterApp/: AudioRouterApp.vcxproj  AudioRouterApp.vcxproj.filters  Cargo.toml  Makefile.toml
AudioRouterApp/src/: main.rs
AudioRouterApp_cpp/: AudioRouterApp.cpp  AudioRouterApp.vcxproj  AudioRouterApp.vcxproj.filters
src/: lib.rs
