[package]
name = "audio_router"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[package.metadata.wdk.driver-model]
driver-type = "KMDF"
kmdf-version-major = 1
target-kmdf-version-minor = 31

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"

[dependencies]
wdk = { path = "C:\\projects\\driver\\windows-drivers-rs\\crates\\wdk", version = "0.3.0" }
wdk-alloc = { path = "C:\\projects\\driver\\windows-drivers-rs\\crates\\wdk-alloc", version = "0.3.0" }
wdk-panic = { path = "C:\\projects\\driver\\windows-drivers-rs\\crates\\wdk-panic", version = "0.3.0" }
wdk-sys = { path = "C:\\projects\\driver\\windows-drivers-rs\\crates\\wdk-sys", version = "0.3.0" }
widestring = { version = "1.1.0", default-features = false, features = ["alloc"] }

[build-dependencies]
wdk-build = { path = "C:\\projects\\driver\\windows-drivers-rs\\crates\\wdk-build", version = "0.3.0" }
